# computer_graphics

Engine/Engine/: Player.cs
Engine/Engine/Data/: CommonData.txt
Engine/Engine/SystemInteraction/: NativeFileDialog.cs
lab1/: CMakeLists.txt  main.cpp  sfml-app  task.txt
lab2/: CMakeLists.txt  main.cpp  task.txt
lab3/: CMakeLists.txt  main.cpp  task.txt
lab4/: CMakeLists.txt  main.cpp  task.txt
lab5/: CMakeLists.txt  main.cpp  task.txt
